[package]
name = "blazingly-fast-RUB-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.3"
confy = { version = "0.5.1", features = [
    "toml_conf",
], default_features = false }
serde = "1.0.163"
serde_derive = "1.0.163"
reqwest = { version = "0.11", features = ["blocking"] }